dclone package version history

Version 1.7-2, March 21, 2012
    * custommodel and write.jags.model fixed and modified.
      These now accept connection as filename argument.

Version 1.7-1, January 31, 2012
    * Now that rjags is only suggested
      rjags is loaded by snowWrapper if JAGS is used
      (dc.parfit, jags.parfit, parJagsModel).
    * n.chains argument was not passed by dc.parfit
      with partype %in% c("parchains", "balancing").
      Bug is now fixed, thanks to K. Nadeem (UofA).
    * length(cl) >= n.chains is required in
      parJagsModel, parUpdate and parCodaSamples
      recognizes empty workers accordingly.
    * lecuyer module is checked only for clusters
      and not for forking.
    * Rd files cleaned up, documentation is up-to-date.

Version 1.7-0, January 25, 2012
    * Preparing for major CRAN release.

Version 1.6-0, December 19, 2011
    * Depends on parallel and R >= 2.14.0 for multicore type 
      forking on Linux/Unix machines. Heavy lifting is
      still done by showWrapper for easy transitioning.
    * parallel is now a dependency, snow is suggested only.
    * list type declaration of params argument not working
      with partype="both" in dc.parfit. This option is
      defunct at the moment.
    * Windows specific suggested packages removed from dependency
      list due to seamless Linux based testing of 
      forking type parallel features (rsprng, BRugs).
    * cl argument in parallelized functions that
      use snowWrapper can be NULL in which case it 
      takes the value from the mc.cores global option 
      getOption("mc.cores"). If mc.cores is not set (NULL)
      of 1, an error is produced.
    * mclapplySB added to mimic size balancing with forking.
    * parJagsModel, parUpdate and parCodaSamples works
      only with snow clusters.
    * updated.model.mcmc.list.dc: keeps n.clones attribute.
    * evalParallelArgument added for consistent handling
      of parallel arguments.