@@ -3,6 +3,8 @@ dclone package version history
 Version 1.7-2, March 21, 2012
     * custommodel and write.jags.model fixed and modified.
       These now accept connection as filename argument.
+    * lambdamax.diag and chisq.diag are now generics.
+      Methods for mcmc.list is defined.
 
 Version 1.7-1, January 31, 2012
     * Now that rjags is only suggested
